# rust-crud-axum-seaorm

./: .env  .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: comment.rs  mod.rs  post.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250916_095631_create_posts_table.rs  m20250916_095726_create_comments_table.rs
src/: main.rs
src/handlers/: auth_handlers.rs  mod.rs  post_handlers.rs  user_handlers.rs
src/models/: mod.rs  post_models.rs  user_models.rs
src/routes/: auth_routes.rs  user_routes.rs
src/utils/: api_errors.rs  guard.rs  jwt.rs  mod.rs
