[package]
name = "rust-crud"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
axum = "0.8.4"
hyper = { version = "1.7.0", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4.42"
serde = { version = "1.0.223", features = ["derive"] }

entity = { path = "./entity" }
x = "0.0.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde_json = "1.0.145"
tower-http = { version = "0.6.6", features = ["cors"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
